# Vocrify

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  LICENSE  README.md  diff_lib.txt  eslint.config.js  fix_downloader.py  index.html  package.json  setup-claude-flow-mcp.sh  telemetry-id  vite.config.ts  vitest.config.ts
ai-engine/: DEPENDENCY_FIX_SUMMARY.md  PARAKEET_E2E_TEST_SUMMARY.md  PARAKEET_SETUP.md  PARAKEET_TEST_REPORT.md  PARAKEET_USAGE.md  PYTHON_PARAKEET_README.md  PYTHON_SETUP.md  QUICKFIX.md  README.md  README_PARAKEET.md  TEST_SUMMARY.md  V3_PERFORMANCE_README.md  base.py  batch_processor.py  check_environment.py  checkpoint.py  command_router.py  command_validation.py  device_detection.py  device_utils.py  download_service.py  downloader.py  environment_checks.py  factory.py  fix_environment.bat  fix_patch.py  install_parakeet.bat  install_parakeet.sh  ipc_events.py  main.py  main.py.backup  model_config.py  model_management_service.py  model_pool.py  model_registry.py  model_size_debug.py  optimized_pipeline.py  pyproject.toml  requirements-parakeet.txt  requirements.txt  (+6 more)
ai-engine/commands/: __init__.py  cancel_download.py  check_commands.py  delete_model.py  diarize_only.py  download_model.py  list_models.py  server_mode.py  test_mode.py  transcribe.py  validate_models.py
ai-engine/diarization/: __init__.py  base.py  pyannote_diarizer.py  sherpa_diarizer.py
ai-engine/models_cache/sherpa-onnx-diarization/sherpa-onnx-embedding/: 3dspeaker_speech_eres2net_base_sv_zh-cn_3dspeaker_16k.onnx.tmp
ai-engine/utils/: audio_intervals.py  ffmpeg_utils.py  rust_audio_bridge.py
src-tauri/: Cargo.toml  apply_scopeguard.ps1  nsis-hooks.nsh  tauri.conf.json  test_ggml_detection.py
src-tauri/resources/text/: hallucinations_dict.json
src-tauri/src/: api_types.rs  app_state.rs  bootstrap.rs  chunking_strategy.rs  command_registry.rs  diarization.rs  disk_utils.rs  download_manager.rs  download_manager_integration.md  engine_router.rs  errors.rs  ffmpeg_manager.rs  hallucination_bag.rs  lib.rs  lib.rs.backup  lib_queue_tests.rs  lib_refactor_contract_tests.rs  lifecycle.rs  main.rs  model_downloader.rs  model_manager.rs  models_dir.rs  onnx_model_downloader.rs  path_validation.rs  performance_config.rs  post_processing.rs  python_bridge.rs  python_installer.rs  python_ipc.rs  quality_gate.rs  setup_runtime.rs  sherpa_diarizer.rs  storage.rs  store_io.rs  task_queue.rs  temp_wav_cleanup_tests.rs  timeline_normalizer.rs  transcription_manager.rs  transcription_manager_memory_tests.rs  transcription_orchestrator.rs  (+2 more)
src-tauri/src/application/: archive.rs  audio.rs  device.rs  diarization.rs  ffmpeg.rs  lifecycle.rs  media.rs  mod.rs  models.rs  performance.rs  setup.rs  storage.rs  transcription.rs  transcription_runtime.rs
src-tauri/src/audio/: audio_tests.rs  converter.rs  loader.rs  mod.rs  tests.rs  utils.rs  vad.rs
src-tauri/src/commands/: app_commands.rs  archive_commands.rs  audio_commands.rs  device_commands.rs  diarization_commands.rs  ffmpeg_commands.rs  media_commands.rs  mod.rs  model_commands.rs  performance_commands.rs  setup_commands.rs  storage_commands.rs  transcription_commands.rs  transcription_runtime_commands.rs
src-tauri/src/domain/: diarization.rs  media.rs  mod.rs  models.rs  setup.rs  transcription.rs
src-tauri/src/infrastructure/: mod.rs  runtime.rs  storage.rs  system.rs
src-tauri/src/interfaces/: api.rs  commands.rs  mod.rs
src-tauri/src/tests/: app_commands_tests.rs  local_models_tests.rs  runtime_compat_tests.rs  task_queue_tests.rs  temp_wav_cleanup_tests.rs  transcription_manager_tests.rs
src-tauri/src/transcription/: audio_pipeline.rs  diarization_pipeline.rs  engine.rs  engine_inference.rs  engine_tuning.rs  errors.rs  gigaam_inference.rs  mod.rs  model_paths.rs  model_state.rs  options.rs  pipeline.rs  stages.rs
src-tauri/target-check/: .rustc_info.json
src-tauri/target-check-2/debug/.fingerprint/adler2-078a33b69696d731/: lib-adler2  lib-adler2.json
src-tauri/target-check-2/debug/.fingerprint/adler2-117655fe58a6b95d/: lib-adler2  lib-adler2.json
src-tauri/target-check-2/debug/.fingerprint/aes-46ff51c14d9c783a/: lib-aes  lib-aes.json
src-tauri/target-check-2/debug/.fingerprint/aho-corasick-065b4ece17ea3816/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-check-2/debug/.fingerprint/aho-corasick-e4727d42bd0eb96e/: lib-aho_corasick.json
src-tauri/target-check-2/debug/.fingerprint/alac-956a62ac2873769d/: lib-alac  lib-alac.json
src-tauri/target-check-2/debug/.fingerprint/alloc-no-stdlib-188ff9de97fe262f/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-check-2/debug/.fingerprint/alloc-no-stdlib-a2a1262f29afa9c5/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-check-2/debug/.fingerprint/alloc-stdlib-744b3aaf5ea046bd/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-check-2/debug/.fingerprint/alloc-stdlib-bb1f4229148c90a0/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-check-2/debug/.fingerprint/anyhow-2ccdb1ad23ed99d2/: lib-anyhow  lib-anyhow.json
src-tauri/target-check-2/debug/.fingerprint/anyhow-37889d8010b09b2b/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-check-2/debug/.fingerprint/anyhow-b16fd2d311d33fd3/: lib-anyhow  lib-anyhow.json
src-tauri/target-check-2/debug/.fingerprint/anyhow-b8ee2dfbdb598b43/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-check-2/debug/.fingerprint/arrayvec-17be2563af2a661f/: lib-arrayvec  lib-arrayvec.json
src-tauri/target-check-2/debug/.fingerprint/atomic-waker-542a698fc5978b22/: lib-atomic_waker  lib-atomic_waker.json
src-tauri/target-check-2/debug/.fingerprint/audrey-a3829a472bd7605f/: lib-audrey  lib-audrey.json
src-tauri/test-support/legacy-rust-tests/: README.md  test_diarization.rs  test_download_manager.rs  test_helpers.rs
src-tauri/test_parakeet_validation/: Cargo.toml
src-tauri/test_parakeet_validation/src/: main.rs
(+1704 files in other folders)
