[package]
name = "transcribe-video"
version = "0.1.0"
description = "A cross-platform video transcription app with speaker diarization"
authors = ["Transcribe Video Team"]
edition = "2021"

[lib]
name = "transcribe_video_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
# Pin ort to match Handy's version to avoid ndarray conflicts
ort = { version = "=2.0.0-rc.10" }
tauri = { version = "2.10.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full", "process"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
dunce = "1.0.5"
scopeguard = "1.2"
tempfile = "3.25.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
which = "8.0.0"
zip = "7.4.0"
flate2 = "1.1.9"
tar = "0.4.44"
base64 = "0.22.1"
chrono = "0.4.43"
bzip2 = "0.4"

# ============================================================================
# Phase 3: transcribe-rs - Unified Rust Transcription Engine
# ============================================================================
#
# transcribe-rs supports multiple engines: Whisper, Parakeet, Moonshine
# GPU acceleration:
# - macOS: Metal (automatic)
# - Windows/Linux: Vulkan (AMD/Intel) or CUDA (NVIDIA)

# Audio processing
audrey = "0.3"
symphonia = { version = "0.5", features = ["mp3", "aac", "alac", "flac", "ogg", "wav", "isomp4"] }
hound = "3.5"
anyhow = "1.0"

# Phase 3: transcribe-rs - all engines included by default
# NOTE: Building with rust-transcribe requires Vulkan SDK on Windows/Linux
# Disable default features to skip transcribe-rs for faster builds
transcribe-rs = { version = "=0.2.2", optional = true, features = ["whisper", "parakeet", "moonshine"] }

# Sherpa-ONNX for speaker diarization (future)
# sherpa-rs = { version = "0.1", features = ["download-binaries"] }

[features]
# Phase 3: transcribe-rs (disabled by default - Windows path length issue)
# To enable: cargo build --features rust-transcribe
default = ["rust-transcribe"]
rust-transcribe = ["dep:transcribe-rs"]

# Build requirements for rust-transcribe:
# - macOS: No additional SDK needed (Metal is built-in) ✓
# - Windows/Linux: Vulkan SDK 1.3+ required (https://vulkan.lunarg.com/)
# - Windows: Long path support must be enabled + may need project at short path (C:\project)
#
# To disable all GPU: cargo build --no-default-features
